<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadAutuacaoRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.cadastro.CadAutuacaoFragment">

    <ImageView
        android:id="@+id/foodView"
        android:layout_width="220dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/foto_autua_o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeRestauranteAvaliacao"
        app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

    <TextView
        android:id="@+id/txtTituloAutuacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/t_tulo_da_autua_o"
        android:inputType="textMultiLine|textImeMultiLine"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/edtTextoAutuacao"
        android:layout_width="346dp"
        android:layout_height="107dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/autua_o"
        android:inputType="textMultiLine|textPersonName|textImeMultiLine"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/edtDataAvaliacao" />

    <TextView
        android:id="@+id/edtDataAvaliacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="sans-serif-condensed-medium"
        android:hint="@string/data"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        tools:ignore="TextViewEdits" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="21dp" />

    <TextView
        android:id="@+id/txtNomeRestauranteAvaliacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/estabelecimento"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="199dp"
        android:layout_height="20dp"
        android:layout_marginStart="175dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="177dp"
        android:gravity="center"
        android:text="@string/clique_para_uma_foto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodView" />

    <Button
        android:id="@+id/voltarrrrBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_rounded"
        android:elevation="8dp"
        android:stateListAnimator="@null"
        android:text="@string/voltar"
        android:textColor="@color/design_default_color_background"
        android:translationZ="4dp"
        app:layout_constraintEnd_toStartOf="@+id/update2Btn"
        app:layout_constraintTop_toBottomOf="@+id/edtTextoAutuacao" />

    <TextView
        android:id="@+id/txtId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/update2Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="44dp"
        android:background="@drawable/btn_rounded"
        android:elevation="8dp"
        android:padding="12dp"
        android:stateListAnimator="@null"
        android:text="@string/inserir_autua_o"
        android:textColor="@color/design_default_color_background"
        android:translationZ="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTextoAutuacao" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/t_tulo"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/data"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloAutuacao" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fiscal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeRestauranteAvaliacao" />

    <TextView
        android:id="@+id/txtFiscalCad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView12"
        app:layout_constraintStart_toEndOf="@+id/textView12" />


</androidx.constraintlayout.widget.ConstraintLayout>