<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_frame">

    <ImageView
        android:id="@+id/imgAutu"
        android:layout_width="220dp"
        android:layout_height="160dp"
        android:layout_marginTop="17dp"
        android:contentDescription="@string/foto_autua_o"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAutTit"
        app:srcCompat="@drawable/ic_add_a_photo_black_24dp" />

    <TextView
        android:id="@+id/txtAutuacao"
        android:layout_width="290dp"
        android:layout_height="160dp"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/libre_baskerville"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgAutu" />

    <Button
        android:id="@+id/btnBacktoTheFuture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_rounded"
        android:elevation="8dp"
        android:stateListAnimator="@null"
        android:text="@string/voltar"
        android:textColor="@color/design_default_color_on_primary"
        android:translationZ="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAutuacao"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/txtAutTit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/result_tot"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>